oxiplate-derive/tests/broken/statements/closed-like-comment.stderr
error: Malformed raw string. Expected `"` after opening hashes
 --> tests/broken/statements/closed-like-comment.rs:4:32
  |
4 | #[oxiplate_inline("{% continue #}")]
  |                                ^
